cabal-version: 3.0
name: @@@PROJECT_NAME=$(basename "$PWD")@@@
version: 0.0.1.0
-- synopsis: 
-- description:
category: @@@CATEGORY@@@
homepage: https://github.com/@@@GITHUBUSER@@@/@@@GITHUB_REPO=$(basename "$PWD")@@@
bug-reports: https://github.com/@@@GITHUBUSER@@@/@@@GITHUB_REPO@@@/issues
author: @@@AUTHOR=$(git config user.name)@@@
maintainer: @@@EMAIL=$(git config user.email)@@@
copyright: @@@YEAR=$(date +'%Y')@@@ @@@AUTHOR@@@
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md, CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/@@@GITHUBUSER@@@/@@@GITHUB_REPO@@@

library
  hs-source-dirs: src
  exposed-modules:
  -- other-modules:
  build-depends:
    , base >=4.11.1
  default-language: Haskell2010
  ghc-options: -Wall -Wpartial-fields -Wunticked-promoted-constructors

executable @@@PROJECT_NAME@@@
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , base
    , @@@PROJECT_NAME@@@
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Wpartial-fields -threaded -Wunticked-promoted-constructors

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , @@@PROJECT_NAME@@@
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -Wpartial-fields -Wunticked-promoted-constructors

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , @@@PROJECT_NAME@@@
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Wpartial-fields -Wunticked-promoted-constructors
